modal functionality added

--- a/frontend/public/services-library/index.html
+++ b/frontend/public/services-library/index.html
@@ -11,14 +11,21 @@
         <title>Services Library</title>
     </head>
     <body class="bg-neutral-200 text-netural-600">
-    
-    <div id="shopping-cart-modal">
+    <div id="shopping-cart-modal" class="hidden">
     <ul id="shopping-list" class="service-item-wrapper">
-
     </ul>
+        <button id="clear-all" class="hidden">Clear All</button>
+
 </div>
     </div>
         <div class="content">
+        <div class="container">
+            <nav>
+<a class = "nav-link" href="/services-library">Service Library</a>
+    <a class = "nav-link" href="/">New Plan</a>
+</nav>
+        </div>
+
             <div class="container">
     <ul class="service-library-wrapper"><li class="service-library-card">
                 <h2>UI Design</h2>
@@ -76,10 +83,34 @@
                     <li><p>Type:</p><p>Product</p></li>
                     <li><p>Process:</p><p>Deliver</p></li>
                 </ul>
+            </li><li class="service-library-card">
+                <h2>Blah</h2>
+                <p>&#39;asjd&#39;aslkdnkajbsdf Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+                numquam molestiae natus doloribus assumenda neque at ratione possimus laboriosam cumque.</p>
+                <ul class="tag-wrapper">
+                    <li><p>Type:</p><p>Experience</p></li>
+                    <li><p>Process:</p><p>Define</p></li>
+                </ul>
+            </li><li class="service-library-card">
+                <h2>Template 2</h2>
+                <p>Template 2 Description beep boop Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+                numquam molestiae natus doloribus assumenda neque at ratione possimus laboriosam cumque.</p>
+                <ul class="tag-wrapper">
+                    <li><p>Type:</p><p>Experience</p></li>
+                    <li><p>Process:</p><p>Debrief</p></li>
+                </ul>
+            </li><li class="service-library-card">
+                <h2>jbjhb</h2>
+                <p>kjgbjk hgfcdrfvghbjkl Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+                numquam molestiae natus doloribus assumenda neque at ratione possimus laboriosam cumque.</p>
+                <ul class="tag-wrapper">
+                    <li><p>Type:</p><p>Experience</p></li>
+                    <li><p>Process:</p><p>Deliver</p></li>
+                </ul>
             </li></ul>
 </div>
             <div id="template-modal" class="hidden">
-<p>beep</p>
+    <button id="template-btn">Close Templates</button>
 </div>
         </div>
         
