--- a/frontend/src/staging-sandbox.html
+++ b/frontend/src/staging-sandbox.html
@@ -16,6 +16,10 @@
     <!-- <div id="plan-sidebar">
 
     </div> -->
+    <nav>
+        <a href="/services-library">Service Library</a>
+        <a href="/">New Plan</a>
+    </nav>
     <div class="content">
         <div class="container">
             <ul class="service-library-wrapper">
