checkout functionality updated

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,60 +31,60 @@
 
 <div id="process-wrapper">
     <h1>Discover</h1>
-    <ul class="service-item-wrapper"><li class="service-item">
+    <ul class="service-item-wrapper"><li class="service-item-original">
     <h3 class="service-title">UX Strategy</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
 </li></ul>
     <h1>Define</h1>
-    <ul class="service-item-wrapper"><li class="service-item">
+    <ul class="service-item-wrapper"><li class="service-item-original">
     <h3 class="service-title">Blah</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
 </li></ul>
     <h1>Design</h1>
-    <ul class="service-item-wrapper"><li class="service-item">
+    <ul class="service-item-wrapper"><li class="service-item-original">
     <h3 class="service-title">UI Design</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
-</li><li class="service-item">
+</li><li class="service-item-original">
     <h3 class="service-title">Customer Journey Mapping</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
-</li><li class="service-item">
+</li><li class="service-item-original">
     <h3 class="service-title">User Flows</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
-</li><li class="service-item">
+</li><li class="service-item-original">
     <h3 class="service-title">Copywriting</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
 </li></ul>
     <h1>Deliver</h1>
-    <ul class="service-item-wrapper"><li class="service-item">
+    <ul class="service-item-wrapper"><li class="service-item-original">
     <h3 class="service-title">Prototyping</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
-</li><li class="service-item">
+</li><li class="service-item-original">
     <h3 class="service-title">Development</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
-</li><li class="service-item">
+</li><li class="service-item-original">
     <h3 class="service-title">jbjhb</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
     </div>
 </li></ul>
     <h1>Debrief</h1>
-    <ul class="service-item-wrapper"><li class="service-item">
+    <ul class="service-item-wrapper"><li class="service-item-original">
     <h3 class="service-title">Template 2</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
