--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,86 +19,29 @@
 </div>
     </div>
         <div class="content">
-        <div class="container">
-            <nav>
-<a class = "nav-link" href="/services-library">Service Library</a>
-    <a class = "nav-link" href="/">New Plan</a>
-</nav>
-        </div>
 
             
-<div class="container">
+<div class="container" id="home-page">
 
-<div id="process-wrapper">
-    <h1>Discover</h1>
-    <ul class="service-item-wrapper"><li class="service-item-original">
-    <h3 class="service-title">UX Strategy</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li></ul>
-    <h1>Define</h1>
-    <ul class="service-item-wrapper"><li class="service-item-original">
-    <h3 class="service-title">Blah</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li></ul>
-    <h1>Design</h1>
-    <ul class="service-item-wrapper"><li class="service-item-original">
-    <h3 class="service-title">UI Design</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li><li class="service-item-original">
-    <h3 class="service-title">Customer Journey Mapping</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li><li class="service-item-original">
-    <h3 class="service-title">User Flows</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li><li class="service-item-original">
-    <h3 class="service-title">Copywriting</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li></ul>
-    <h1>Deliver</h1>
-    <ul class="service-item-wrapper"><li class="service-item-original">
-    <h3 class="service-title">Prototyping</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li><li class="service-item-original">
-    <h3 class="service-title">Development</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li><li class="service-item-original">
-    <h3 class="service-title">jbjhb</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li></ul>
-    <h1>Debrief</h1>
-    <ul class="service-item-wrapper"><li class="service-item-original">
-    <h3 class="service-title">Template 2</h3>
-    <div class="info-icon">
-        <img src="./images/information-circle-outline.svg" alt="">
-    </div>
-</li></ul>
-    </div>
+<div id="main-content">
+<div class="heading-wrapper">
+    <h1>Project Builder</h1>
+    <p>Select a path to explore our services!</p>
+</div>
 
-    <button href="/services-library/" id="template-btn">Templates</button>
+    <ul class="nav-options-wrapper">
+        <li class="nav-option-item"><a href="/services-library">Learn</a></li>
+        <li class="nav-option-item"><a href="/project-builder">Begin with blank plan</a></li>
+        <li class="nav-option-item"><a href="/project-builder">Choose from template</a></li>
+    </ul>
+
+</div>
+<img id="rp-logo" src="./images/rp-logo.svg" alt="">
 
 </div>
 
-
-
             <div id="template-modal" class="hidden">
+    
     <button id="template-btn">Close Templates</button>
 </div>
         </div>
