--- a/frontend/src/staging-sandbox.html
+++ b/frontend/src/staging-sandbox.html
@@ -16,6 +16,15 @@
     <!-- <div id="plan-sidebar">
 
     </div> -->
+
+    <h1>Project Builder</h1>
+    <ul class="nav-options-wrapper">
+        <li class="nav-option-item"><a href="/services-library">Learn</a></li>
+        <li class="nav-option-item"><a href="/project-builder">Begin with blank project</a></li>
+        <li class="nav-option-item"><a href="/project-builder">Choose from template</a></li>
+    </ul>
+
+    <img src="./images/information-circle-outline.svg" alt="">
     <nav>
         <a href="/services-library">Service Library</a>
         <a href="/">New Plan</a>
