font face update & add readme

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,8 @@
     <ul id="shopping-list" class="service-item-wrapper">
     </ul>
         <button id="clear-all" class="hidden">Clear All</button>
-
+        <button id="submit" class="hidden">Submit</button>
+        
 </div>
     </div>
         <div class="content">
