--- a/frontend/public/project-builder/index.html
+++ b/frontend/public/project-builder/index.html
@@ -8,14 +8,15 @@
         <link rel="stylesheet" href="/css/main.css">
         <link rel="icon" href="/images/favicon.png" type="image/png">
 
-        <title>Home</title>
+        <title>Project Builder</title>
     </head>
     <body class="bg-neutral-200 text-netural-600">
     <div id="shopping-cart-modal" class="hidden">
     <ul id="shopping-list" class="service-item-wrapper">
     </ul>
         <button id="clear-all" class="hidden">Clear All</button>
-
+        <button id="submit" class="hidden">Submit</button>
+        
 </div>
     </div>
         <div class="content">
